--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<embed src="https://tutanto.github.io/AltaCV_Template.pdf" width="100%" height="850px"/>
+<embed src="https://tutanto.github.io/CV/AltaCV_Template.pdf" width="100%" height="850px"/>
